--- a/templates/home.html
+++ b/templates/home.html
@@ -9,18 +9,18 @@
 <body>
 	<form action='url_handler'>
 		<label for='url'>Please input a url:
-			<input class='urlBox' type='text' id='url' name='url'>
+			<input class='urlBox' type='text' id='url' name='url' value="http://">
 			<input class='submit' type='submit'>
 		</label>
 	</form>
-	<div>
+	<div id="sourcehtml">
 	</div>
 	<script>
 		function displayHtml(evt){
 			evt.preventDefault();
 			url = $('#url').val();
 			$.get("/url_handler", {'url': url}, function(data){
-				console.log(data);
+				$('#sourcehtml').html(data);
 			});
 		}
 		$('.submit').click(displayHtml);
