--- a/templates/home.html
+++ b/templates/home.html
@@ -13,24 +13,24 @@
 			<input class='submit' type='submit'>
 		</label>
 	</form>
-	<div class="after_click" style="display: none">
+<!-- 	<div class="after_click" style="display: none">
 		<h1>Website: <span id="website"></span></h1>
 		<h2>Source HTML:</h2>
 	</div>
-	<div id="sourcehtml">
+	<div id="sourcehtml" style='float: left'>
 	</div>
-	<script>
-		function displayHtml(evt){
-			evt.preventDefault();
-			url = $('#url').val();
-			display_url = url.slice(7);
-			$.get("/url_handler", {'url': url}, function(data){
-				$('.after_click').css('display', 'block');
-				$('#website').html(display_url);
-				$('#sourcehtml').html(data);
-			});
-		}
-		$('.submit').click(displayHtml);
-	</script>
+	// <script>
+	// 	function displayHtml(evt){
+	// 		evt.preventDefault();
+	// 		url = $('#url').val();
+	// 		display_url = url.slice(7);
+	// 		$.get("/url_handler", {'url': url}, function(data){
+	// 			$('.after_click').css('display', 'block');
+	// 			$('#website').html(display_url);
+	// 			$('#sourcehtml').html(data);
+	// 		});
+	// 	}
+	// 	$('.submit').click(displayHtml);
+	// </script>
 </body>
 </html>
