--- a/templates/results.html
+++ b/templates/results.html
@@ -28,16 +28,6 @@
 	<div class="toHighlight">
 		{{ html|safe }}
 	</div>
-	<script>
-		function highlight(evt){
-			targetTag = $(evt.currentTarget).data().id;
-			targetClass = '.all-'+targetTag;
-			$("*").css('background-color', "");
-			$(targetClass).css('background-color', '#59CDFF');
-			$(this).css('background-color', '#59CDFF');
-			$(this).next().css('background-color', '#59CDFF');
-		}
-		$('.tag').click(highlight);
-	</script>
+	<script src="/static/highlight.js"></script>
 </body>
 </html>
