prettifying the front-end

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,16 +2,27 @@
 <html>
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<link rel="icon" href="/static/star.png">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<title>
-		html Viewer
+		Enter a URL
 	</title>
 </head>
 <body>
-	<form action='url_handler'>
-		<label for='url'>Please input a url:
-			<input class='urlBox' type='text' id='url' name='url' value="http://">
-			<input class='submit' type='submit'>
-		</label>
-	</form>
+	<div class="container">
+		<div class="row"></div>
+		<div class="row form_box">
+			<center><form action='url_handler'>
+				<label for='url'>Please enter a url:
+					<input class='urlBox' type='text' id='url' name='url' value="http://">
+					<input class='submit' type='submit'>
+				</label>
+			</form></center>
+		</div>
+	</div> 
 </body>
+<footer>
+	<center><a href="akvanhar.github.io">Created by Alyson van Hardenberg</a></center>
+</footer>
 </html>
