--- a/templates/home.html
+++ b/templates/home.html
@@ -23,6 +23,10 @@
 	</div> 
 </body>
 <footer>
-	<center><a href="akvanhar.github.io">Created by Alyson van Hardenberg</a></center>
+	<center>
+		<i class="fa fa-star-o fa-lg"></i>
+		<a href="akvanhar.github.io">Created by Alyson van Hardenberg</a>
+		<i class="fa fa-star-o fa-lg"></i>
+	</center>
 </footer>
 </html>
