adding Heroku files

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,27 +5,33 @@
 	<link rel="icon" href="/static/star.png">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<style>
+	.spacer {
+		height: 5em;
+	}
+	</style>
 	<title>
 		Enter a URL
 	</title>
 </head>
 <body>
 	<div class="container">
-		<div class="row"></div>
+		<div class="row spacer"></div>
 		<div class="row form_box">
 			<center><form action='url_handler'>
 				<label for='url'>Please enter a url:
 					<input class='urlBox' type='text' id='url' name='url' value="http://">
-					<input class='submit' type='submit'>
+					<input class='submit btn btn-default' type='submit'>
 				</label>
 			</form></center>
 		</div>
+		<div class="row spacer"></div>
 	</div> 
 </body>
 <footer>
 	<center>
 		<i class="fa fa-star-o fa-lg"></i>
-		<a href="akvanhar.github.io">Created by Alyson van Hardenberg</a>
+		<a href="http://akvanhar.github.io">Created by Alyson van Hardenberg</a>
 		<i class="fa fa-star-o fa-lg"></i>
 	</center>
 </footer>
