--- a/templates/results.html
+++ b/templates/results.html
@@ -10,27 +10,34 @@
 	</title>
 </head>
 <body>
-		<h1>Website: {{ url }}</h1>
-		<h2>Source HTML:</h2>
-		<table class="toHighlight">
-			<thead>
-				<tr>
-					<th>Tag</th>
-					<th>Count</th>
-				</tr>
-			</thead>
-			<tbody>
-				{% for tag in tags %}
-					<tr>
-						<td class="tag" data-id='{{ tag }}'>{{ tag }}</td>
-						<td>{{ tags[tag] }}</td>
-					</tr>
-				{% endfor %}
-			</tbody>
-		</table>
-	<div class="toHighlight">
-		{{ html|safe }}
+	<div class='container'>
+		<div class="row">
+			<center><h1>Website: {{ url }}</h1></center>
+		</div>
+		<div class="row">
+			<div class="col-md-3">
+				<table class="toHighlight table table-striped">
+					<thead>
+						<tr>
+							<th>Tag</th>
+							<th>Count</th>
+						</tr>
+					</thead>
+					<tbody>
+						{% for tag in tags %}
+							<tr>
+								<td class="tag" data-id='{{ tag }}'>{{ tag }}</td>
+								<td>{{ tags[tag] }}</td>
+							</tr>
+						{% endfor %}
+					</tbody>
+				</table>
+			</div>
+		<div class="toHighlight col-md-9">
+			{{ html|safe }}
+		</div>
 	</div>
 	<script src="/static/highlight.js"></script>
+</div>
 </body>
 </html>
